@@ -1,5 +1,10 @@
 2002-06-02  Jason Thorpe  <thorpej@wasabisystems.com>
 
+	* ppcnbsd-tdep.c (ppcnbsd_init_abi): Don't set
+	use_struct_convention to ppc_sysv_abi_broken_use_struct_convention.
+
+2002-06-02  Jason Thorpe  <thorpej@wasabisystems.com>
+
 	* config/rs6000/aix4.mt (TDEPFILES): Use ppc-sysv-tdep.o
 	insetead of ppc-linux-tdep.o.
 	* config/rs6000/rs6000.mt (TDEPFILES): Likewise.
